Minor wording changes

--- a/SparcFeatures/Pages/Index.razor
+++ b/SparcFeatures/Pages/Index.razor
@@ -6,12 +6,12 @@
         <div class="container">
             <div class="header center">
                 <h1>
-                    Striving for a world where 
+                    We are building a world where 
                     <span class="invert">startups</span>
                     are owned by those who 
-                    <span class="invert">built it</span>
+                    <span class="invert">built them</span>
                 </h1>
-                <p class="subtitle-1">We are building a community of individuals & organisations who believe there is a better way to fund, build and reward startups.</p>
+                <p class="subtitle-1">We are building a community of individuals & organizations who believe there is a better way to fund, build and reward startups.</p>
             </div>
             <div class="cta-box">
                 <div class="box-header">
@@ -48,7 +48,7 @@
                     <img src="images/icons/09.svg" />
                 </div>
                 <div class="mission-content">
-                    <h5 class="subtitle-large">Sparc Cooperative is a verfied Worker Cooperative, all the way down to our bylaws.</h5>
+                    <h5 class="subtitle-large">Sparc Cooperative is a verified Worker Cooperative, all the way down to our bylaws.</h5>
                     <h5 class="subtitle-large">This means that at Sparc, money does not buy power. Every person owns an equal share and has an equal vote, no matter their job.</h5>
                     <h5 class="subtitle-large">No external investment can dictate the direction the Sparc team goes.</h5>
                     <h5 class="subtitle-large">No single person walks away with the majority of the project.</h5>
