Fix for mobile menu open by default

--- a/SparcFeatures/Shared/NavMenu.razor
+++ b/SparcFeatures/Shared/NavMenu.razor
@@ -72,7 +72,7 @@
 
 @code {
     public string ToggleContact = "toggle";
-    public string ToggleMenuClass = "";
+    public string ToggleMenuClass = "hide-menu";
     public string? EmailAddress;
 
     async Task SendEmail()
