--- a/SparcFeatures/Pages/Index.razor
+++ b/SparcFeatures/Pages/Index.razor
@@ -6,12 +6,12 @@
         <div class="container">
             <div class="header center">
                 <h1>
-                    We are building a world where 
+                    We are creating a community where 
                     <span class="invert">startups</span>
                     are owned by those who 
                     <span class="invert">built them</span>
                 </h1>
-                <p class="subtitle-1">We are building a community of individuals & organizations who believe there is a better way to fund, build and reward startups.</p>
+                <p class="subtitle-1">Sparc is a community of individuals & organizations who believe there is a better way to fund, build and reward startups.</p>
             </div>
             <div class="cta-box">
                 <div class="box-header">
@@ -149,7 +149,6 @@
                     and companies who align with our values and our goals.
                 </h5>
             </div>
-            <Sparc.Coop.Blog.BlogPartial />
         </div>
     </section>
 </div>
