--- a/SparcFeatures/_Imports.razor
+++ b/SparcFeatures/_Imports.razor
@@ -16,6 +16,7 @@
 @using Sparc.Coop.Pages
 @using Sparc.Coop.Shared
 @using Sparc.Ibis
+@using Sparc.Coop.Blog
 
 @inject IJSRuntime JSRuntime
 @inject NavigationManager Nav
