--- a/SparcFeatures/Blog/Blog.scss
+++ b/SparcFeatures/Blog/Blog.scss
@@ -1,110 +1,76 @@
 ﻿@import "../App.Variables.scss";
 
-.blog-page {
-    .container {
-        max-width: 1024px;
-    }
+.blog-post {
+    height: 100%;
 
-    .blog {
+    header {
+        display: grid;
+        grid-template-rows: auto 20px;
+        gap: 24px;
+        margin: 40px 0 20px;
 
-        .posted {
-            margin-bottom: 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            p {
-                color: var(--primary-500);
-                font-size: 18px;
-            }
-        }
-
-        &-image {
-            border-radius: 6px;
-            margin-bottom: 80px;
-
-            img {
-                width: 100%;
-            }
-        }
-
-        p {
-            font-size: 20px;
-            line-height: 130%;
-            padding: 20px 0;
-        }
-
-        &--title p {
-            text-align: center;
-            font-size: 68px;
-            font-weight: 500;
+        h3 {
+            grid-column: 1 / span 2;
+            margin-bottom: 24px;
         }
     }
 
-    @media only screen and (max-width: 480px) {
-        .blog--title p {
-            font-size: 48px;
+    figure {
+        border-radius: 6px;
+        margin-bottom: 80px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #f2eddf;
+        height: 50vh;
+
+        img {
+            block-size: auto;
+            max-inline-size: 100%;
+            height: 80%;
         }
+    }
+
+    p {
+        font-size: 24px;
+        line-height: 31.2px;
+        padding: 20px 0;
+        font-family: 'IBMPlexSans-Regular', serif;
+    }
+
+    h3 {
+        text-align: center;
+        font-size: 68px;
+        font-weight: 500;
+    }
+
+    aside, time {
+        font-size: 24px;
+        line-height: 27px;
+        font-weight: 400;
+        color: $grey-500;
+    }
+
+    time {
+        text-align: right;
     }
 }
 
-.blog-wrapper {
-    display: flex;
-    max-width: 1216px;
-    gap: 32px;
-    margin: 0 auto;
-
-    .blog-card {
-        width: 384px;
-        height: 350px;
-        cursor: pointer;
-
-        img {
-            width: 100%;
-            height: 256px;
-            border-radius: 12px;
-        }
-
-        .blog-tags {
-            margin-top: 42px;
-
-            .tag {
-                margin: 0;
-                padding: 0;
-                border: none;
-                font-family: 'IBMPlexSans-Regular';
-            }
-
-            .tag-divider {
-                font-size: 14px;
-                color: $peach-500;
-            }
-        }
-
-        .subtitle-large {
-            font-size: 24px;
-        }
+@media only screen and (max-width: 480px) {
+    h3 {
+        font-size: 48px;
     }
+}
 
 
-    @media only screen and (max-width: 760px) {
-        width: 100%;
-        padding-bottom: 15px;
-        max-width: none;
-        display: flex;
-        flex-wrap: wrap;
+.blog-wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 32px;
 
-        .blog-card {
-            width: 80%;
-            margin: 0 auto;
-
-            .subtitle-large {
-                font-size: 24px;
-            }
-
-            p {
-                text-align: left;
-            }
-        }
+    @media screen and (min-width: 960px) {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-auto-rows: 1fr;
     }
 }
