--- a/SparcFeatures/Blog/BlogPost.razor
+++ b/SparcFeatures/Blog/BlogPost.razor
@@ -1,45 +1,42 @@
 ﻿@using Sparc.Ibis;
 
-<article class="blog-post">
-    @if (Post["image"] != null)
-    {
-        <figure>
+<article class="blog-post ibis-ignore">
+    <header>
+        @if (Post["title"] != null)
+        {
+            <h3>
+                @Post["title"]
+            </h3>
+        }
+        else
+        {
+            <h3>
+                @Post.Text.Substring(0, 30)...
+            </h3>
+        }
+
+        @if (Post["author"] != null)
+        {
+            <aside>
+                by @Post["author"]
+            </aside>
+        }
+
+        <time datetime="@Post.Timestamp.ToString("O")">
+            @Post.Timestamp.ToString("M")
+        </time>
+    </header>
+
+    <figure>
+        @if (Post["image"] != null)
+        {
             <img src="@Post["image"]" alt="@Post["title"]" />
-        </figure>
-    }
-
-    @*
-    <div class="blog-tags">
-    <button class="tag btn-small">#Design</button>
-    <button class="tag btn-small">#Productivity</button>
-    </div>
-    *@
-
-    @if (Post["title"] != null)
-    {
-        <h3>
-            @Post["title"]
-        </h3>
-    }
-    else
-    {
-        <h3>
-            @Post.Text.Substring(0, 30)...
-        </h3>
-    }
-
-    @if (Post["author"] != null)
-    {
-        <aside>
-            by @Post["author"]
-        </aside>
-    }
-
-    <time datetime="@Post.Timestamp.ToString("O")">
-        @Post.Timestamp.ToString("M")
-    </time>
+        }
+    </figure>
     
-    @Post.Html
+    <section class="content">
+        @Post.Html
+    </section>
 </article>
 
 @code {
