add freshchat script to _Host.cshtml

--- a/SparcFeatures/Pages/_Host.cshtml
+++ b/SparcFeatures/Pages/_Host.cshtml
@@ -5,6 +5,9 @@
 
 <!DOCTYPE html>
 <html>
+<script src='//fw-cdn.com/2298126/2939651.js'
+        chat='true'>
+</script>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"  />
