--- a/SparcFeatures/Shared/NavMenu.razor
+++ b/SparcFeatures/Shared/NavMenu.razor
@@ -10,9 +10,9 @@
             <div class="nav-link">
                 <a href="/projects">Projects</a>
             </div>
-            <div class="nav-link">
+            @*<div class="nav-link">
                 <a href="/blogs">Blog</a>
-            </div>
+            </div>*@
             <div class="nav-link">
                 <a href="mailto:info@sparc.coop?subject=Contact Inquiry">Contact</a>
             </div>
