--- a/SparcFeatures/_Imports.razor
+++ b/SparcFeatures/_Imports.razor
@@ -15,8 +15,10 @@
 @using Sparc.Coop
 @using Sparc.Coop.Pages
 @using Sparc.Coop.Shared
-@using Sparc.Ibis
+@using Sparc.Coop.Projects
 @using Sparc.Coop.Blog
+@using Sparc.Coop.Community
+@using Sparc.Ibis
 
 @inject IJSRuntime JSRuntime
 @inject NavigationManager Nav
