--- a/SparcFeatures/app.scss
+++ b/SparcFeatures/app.scss
@@ -1,6 +1,7 @@
 ﻿@import "App.Variables";
 @import "App.Assets";
 
+@import "Shared/MarketingLayout";
 @import "Shared/NavMenu";
 
 @import "Pages/Index";
