--- a/SparcFeatures/Pages/Index.scss
+++ b/SparcFeatures/Pages/Index.scss
@@ -16,7 +16,7 @@ body.ibis-translating {
         background: $yellow-100;
         position: relative;
 
-        .header {
+        header {
             width: 100%;
             margin: 0 auto;
             margin-bottom: 72px;
@@ -106,6 +106,17 @@ body.ibis-translating {
 
         img {
             max-height: 24px;
+
+            &:hover {
+                animation: slideDownBounce 600ms ease-in-out infinite;
+                cursor: pointer;
+            }
+        }
+    }
+
+    .content {
+        &.scrollable {
+            animation: fadeIn 1000ms ease-in-out;
         }
     }
 
@@ -135,11 +146,7 @@ body.ibis-translating {
     .values {
         padding-bottom: 160px;
         background: $yellow-100;
-
-        .container {
-            padding-bottom: 0px;
-            position: relative;
-        }
+        position: relative;
 
         &-tag {
             margin: 0 auto;
@@ -151,7 +158,7 @@ body.ibis-translating {
             }
         }
 
-        .header {
+        header {
             width: 70%;
             max-width: 592px;
             margin: 0 auto;
@@ -273,7 +280,7 @@ body.ibis-translating {
         max-width: 100%;
         padding-top: 100px;
 
-        .header {
+        header {
             max-width: 1216px;
             margin: 0 auto;
             margin-bottom: 55px;
@@ -282,6 +289,9 @@ body.ibis-translating {
                 max-width: 592px;
             }
         }
+    }
+
+    @media only screen and (max-width: 1200px) {
     }
 
     @media only screen and (max-width: 760px) {
@@ -302,7 +312,7 @@ body.ibis-translating {
         .home-hero {
             padding-top: 60px;
 
-            .header {
+            header {
                 h1 {
                     font-family: 'NeueHaasDisplayBold';
                     font-size: 70px;
@@ -418,7 +428,7 @@ body.ibis-translating {
             padding-top: 64px;
             padding-bottom: 64px;
 
-            .header {
+            header {
                 width: 100%;
                 margin-bottom: 48px;
             }
@@ -437,7 +447,7 @@ body.ibis-translating {
         .resources {
             padding: 40px 0;
 
-            .header {
+            header {
                 h5 {
                     margin: 0 auto;
                 }
@@ -460,10 +470,6 @@ body.ibis-translating {
     @media only screen and (max-width: 480px) {
         margin-top: 63px;
 
-        .container {
-            padding: 0 16px;
-        }
-
         .homepage {
             overflow-x: hidden;
         }
@@ -472,7 +478,7 @@ body.ibis-translating {
             padding-top: 32px;
             padding-bottom: 60px;
 
-            .header {
+            header {
                 margin-bottom: 32px;
 
                 h1 {
@@ -544,5 +550,25 @@ body.ibis-translating {
                 }
             }
         }
+    }
+}
+
+@keyframes slideDownBounce {
+    0%, 100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-10px);
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
     }
 }
