--- a/SparcFeatures/Pages/_Host.cshtml
+++ b/SparcFeatures/Pages/_Host.cshtml
@@ -19,5 +19,11 @@
     </app>
 
     <script src="_framework/blazor.server.js"></script>
+    <script>
+        function scrollFunction() {
+            const element = document.getElementById("mission");
+            element.scrollIntoView({ behavior: 'smooth' });
+        }
+    </script>
 </body>
 </html>
