--- a/SparcFeatures/Shared/NavMenu.razor
+++ b/SparcFeatures/Shared/NavMenu.razor
@@ -41,14 +41,14 @@
         <a href="/" class="logo">
             <img src="/images/icons/Logo.png" />
         </a>
-        <div class="@ToggleMenuClass">
+        <div class="menu-container @ToggleMenuClass">
             <ul class="menu">
                 <li class="nav-link" @onclick="ToggleMenu">
                     <a href="/">Home</a>
                 </li>
-                <li class="nav-link" @onclick="ToggleMenu">
+                @*<li class="nav-link" @onclick="ToggleMenu">
                     <a href="/blogs">Blogs</a>
-                </li>
+                </li>*@
                 <li class="nav-link" @onclick="ToggleMenu">
                     <a href="/projects">Projects</a>
                 </li>
