--- a/SparcFeatures/Shared/MarketingLayout.scss
+++ b/SparcFeatures/Shared/MarketingLayout.scss
@@ -9,4 +9,25 @@ main.landing {
     .homepage {
         grid-column: 2/14;
     }
+
+    @media screen and (max-width: 1200px) {
+        grid-template-columns: 1fr repeat(8, 71px) 1fr;
+        grid-column-gap: 15px;
+
+        .homepage {
+            grid-column: 2/10;
+        }
+    }
+
+    @media screen and (max-width: 760px) {
+        grid-template-columns: 1fr repeat(4, 71px) 1fr;
+
+        .homepage {
+            grid-column: 2/6;
+        }
+    }
+
+    @media screen and (max-width: 480px) {
+        grid-template-columns: 1fr repeat(4, 64px) 1fr;
+    }
 }
