--- a/SparcFeatures/Shared/NavMenu.scss
+++ b/SparcFeatures/Shared/NavMenu.scss
@@ -26,14 +26,23 @@ nav {
             border-radius: 100px;
             padding: 0 14px;
 
-            a {
-                font-family: 'NeueHaasDisplayRoman';
-            }
-        }
+            .nav-link {
+                padding: 10px;
+                cursor: pointer;
 
-        .nav-link {
-            padding: 10px;
-            cursor: pointer;
+                a {
+                    font-family: 'NeueHaasDisplayRoman';
+                    transition: 200ms ease-in-out;
+
+                    &:hover {
+                        color: $grey-500;
+                    }
+
+                    &:visited {
+                        color: none;
+                    }
+                }
+            }
         }
     }
 
@@ -129,6 +138,10 @@ nav {
                 display: none;
             }
 
+            .menu-container {
+                height: calc(100vh - 63.73px);
+            }
+
             .menu {
                 width: 100vw;
                 padding: 96px 0;
@@ -149,7 +162,6 @@ nav {
                 overflow: hidden;
                 width: 100vw;
                 padding: 90px 18px;
-                background: $yellow-100;
                 display: flex;
                 gap: 15px;
                 justify-content: center;
